--- a/skins/mel_elastic/themes/super-classic/style/less/theme.less
+++ b/skins/mel_elastic/themes/super-classic/style/less/theme.less
@@ -28,6 +28,16 @@ html.theme-super-classique {
     }
   }
 
+  .popupmenu {
+    .listing {
+      li {
+        &.selected {
+          color: var(--main-text-color);
+        }
+      }
+    }
+  }
+
   .mel-selectable {
     &.selected {
       --tierciary-bckg-color: #0EAF9C;
